--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,22 @@
-<mat-toolbar>
-  <mat-icon>local_fire_department</mat-icon>
-  <span>Kanban Fire</span>
+<mat-toolbar color='primary'>
+  <mat-icon>dashboard</mat-icon>
+  <span>Kanban Board</span>
+  <span class="fill-space"></span>
+  <button (click)='newTask()' mat-button>
+    <!-- <mat-icon>add</mat-icon> -->
+    Add Task
+  </button>
 </mat-toolbar>
 
 <div class='content-wrapper'>
-  <button (click)='newTask()' mat-button>
-    <mat-icon>add</mat-icon>
-    Add Task
-  </button>
+  
   <div class="container-wrapper">
     <div class="container">
       <h2>To Do</h2>
 
       <mat-card cdkDropList id="todo" #todoList="cdkDropList" [cdkDropListData]="todo"
         [cdkDropListConnectedTo]="[doneList, inProgressList]" (cdkDropListDropped)="drop($event)" class="list">
-        <p class="empty-label" *ngIf="todo.length === 0">Empty list</p>
+        <p class="empty-label" *ngIf="todo.length === 0">Empty</p>
         <app-task (edit)="editTask('todo', $event)" *ngFor="let task of todo" cdkDrag [task]="task"></app-task>
       </mat-card>
     </div>
@@ -24,7 +26,7 @@
 
       <mat-card cdkDropList id="inProgress" #inProgressList="cdkDropList" [cdkDropListData]="inProgress"
         [cdkDropListConnectedTo]="[todoList, doneList]" (cdkDropListDropped)="drop($event)" class="list">
-        <p class="empty-label" *ngIf="inProgress.length === 0">Empty list</p>
+        <p class="empty-label" *ngIf="inProgress.length === 0">Empty</p>
         <app-task (edit)="editTask('inProgress', $event)" *ngFor="let task of inProgress" cdkDrag [task]="task">
         </app-task>
       </mat-card>
@@ -35,7 +37,7 @@
 
       <mat-card cdkDropList id="done" #doneList="cdkDropList" [cdkDropListData]="done"
         [cdkDropListConnectedTo]="[todoList, inProgressList]" (cdkDropListDropped)="drop($event)" class="list">
-        <p class="empty-label" *ngIf="done.length === 0">Empty list</p>
+        <p class="empty-label" *ngIf="done.length === 0">Empty</p>
         <app-task (edit)="editTask('done', $event)" *ngFor="let task of done" cdkDrag [task]="task"></app-task>
       </mat-card>
     </div>
